--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -23,7 +23,9 @@ p {
 /* Custom page header */
 .header {
   border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
+  height: 500px;
+  margin-bottom: -150px;
+  background-image: url("http://lorempixel.com/1200/500/people");
 }
 
 /* Make the masthead heading the same height as the navigation */
@@ -32,6 +34,10 @@ p {
   margin-bottom: 0;
   line-height: 40px;
   padding-bottom: 19px;
+}
+
+.cta {
+  color: white;
 }
 
 /* Custom page footer */
@@ -77,7 +83,7 @@ p {
   }
   /* Space out the masthead */
   .header {
-    margin-bottom: 30px;
+    margin-bottom: -150px;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
